Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -57,17 +57,14 @@ body {
 }
 
 .st0 {
-  clip-path: url(#svgid_2_);
   fill: #f7af7f;
 }
 
 .st1 {
-  clip-path: url(#svgid_2_);
   fill: #fdeadd;
 }
 
 .st2 {
-  clip-path: url(#svgid_2_);
   fill: #facaaa;
 }
 
@@ -111,22 +108,18 @@ body {
 }
 
 .st12 {
-  clip-path:url(#svgid_4_);
   fill: #f59555;
 }
 
 .st13 {
-  clip-path:url(#svgid_4_);
   fill: #ff812c;
 }
 
 .st14 {
-  clip-path:url(#svgid_4_);
   fill: #d86c23;
 }
 
 .st15 {
-  clip-path:url(#svgid_4_);
   fill: #a55219;
 }
 
@@ -145,7 +138,7 @@ body {
 }
 
 .lineupin {
-  width:100%;
+  width: 100%;
   padding: 0 1em;
 }
 
@@ -154,23 +147,23 @@ body {
 }
 
 .st1 {
-  fill:#7998b1;
+  fill: #7998b1;
 }
 
 .st2 {
-  fill:#e7e8eb;
+  fill: #e7e8eb;
 }
 
 .st3 {
-  fill:none;
+  fill: none;
 }
 
 .st4 {
-  fill:#f09549;
+  fill: #f09549;
 }
 
 .st5 {
-  fill:#5c6776;
+  fill: #5c6776;
 }
 
 .chart {
@@ -221,7 +214,7 @@ body {
 
 .locktop {
   transition: all .5s ease-in-out;
-  }
+}
 
 .biglockin:hover .locktop {
   transform: translate(0, 65px);
@@ -229,7 +222,7 @@ body {
 
 .orangedude {
   transition: all .5s linear;
-  transform: scale(1)
+  transform: scale(1);
 }
 
 .lineupin:hover .orangedude {
